--- a/LastPerformance/package.json
+++ b/LastPerformance/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.12",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react-scripts": "^5.0.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
