--- a/LastPerformance/package.json
+++ b/LastPerformance/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.0.12",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
